MyDemoOrg/force-app/main/default/objects/BBCRM__Email_Notification__c/BBCRM__Email_Notification__c.object-meta.xml
<CustomObject>
    <label>Email Notification</label>
    <nameField>
        <displayFormat>EN-{0000}</displayFormat>
        <label>Email Notification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Notification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>