MyDemoOrg/force-app/main/default/objects/BBCRM__Email_Notification__c/fields/BBCRM__Account__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Email Notification</relationshipLabel>
    <relationshipName>Email_Notification</relationshipName>
    <type>Lookup</type>
</CustomField>