MyDemoOrg/force-app/main/default/objects/BBCRM__Email_Notification__c/fields/BBCRM__Attachments__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Attachments__c</fullName>
    <label>Attachments</label>
    <length>200</length>
    <type>Text</type>
</CustomField>