MyDemoOrg/force-app/main/default/objects/BBCRM__Email_Notification__c/fields/BBCRM__Clicks__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Clicks__c</fullName>
    <label>Clicks</label>
    <length>100</length>
    <type>Text</type>
</CustomField>