MyDemoOrg/force-app/main/default/objects/BBCRM__Email_Notification__c/fields/BBCRM__Date__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>