MyDemoOrg/force-app/main/default/objects/BBCRM__Email_Notification__c/fields/BBCRM__Email_Address__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Email_Address__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>