MyDemoOrg/force-app/main/default/objects/BBCRM__Email_Notification__c/fields/BBCRM__Lead__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Email Notification</relationshipLabel>
    <relationshipName>Email_Notification</relationshipName>
    <type>Lookup</type>
</CustomField>