MyDemoOrg/force-app/main/default/objects/BBCRM__Email_Notification__c/fields/BBCRM__Opens__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Opens__c</fullName>
    <label>Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>