MyDemoOrg/force-app/main/default/objects/BBCRM__Email_Notification__c/fields/BBCRM__source__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__source__c</fullName>
    <defaultValue>&quot;Salesforce&quot;</defaultValue>
    <label>source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>